--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		body {
 			max-width: 100vw;
 			height: 120vh;
-			background-image: url(img/bg-intro-mobile.png);
+			background-image: url(bg-intro-mobile.png);
 			background-color: hsl(0, 100%, 74%);
 		}
 
@@ -244,7 +244,7 @@
 
 			if (firstName.length === 0) {
 				errorFirstName.innerText = 'First name cannot be blank'
-				errorIconFirst.innerHTML = '<img src="img/icon-error.svg">'
+				errorIconFirst.innerHTML = '<img src="icon-error.svg">'
 			}
 
 		}
@@ -256,7 +256,7 @@
 
 			if (lastName.length === 0) {
 				errorLastName.innerText = 'Last name cannot be blank'
-				errorIconLast.innerHTML = '<img src="img/icon-error.svg">'
+				errorIconLast.innerHTML = '<img src="icon-error.svg">'
 			}
 
 		}
@@ -269,8 +269,7 @@
 
 			if (emailAddress.length === 0) {
 				errorEmail.innerText = 'Email cannot be blank'
-				errorIconEmail.innerHTML = '<img src="img/icon-error.svg">'
-				emailAddress.value = 'example@email.com'
+				errorIconEmail.innerHTML = '<img src="icon-error.svg">'
 			}
 
 		}
@@ -282,7 +281,7 @@
 
 			if (password.length === 0) {
 				errorPassword.innerText = 'Password cannot be blank'
-				errorIconPassword.innerHTML = '<img src="img/icon-error.svg">'
+				errorIconPassword.innerHTML = '<img src="icon-error.svg">'
 			}
 
 		}
